--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "sharp": "^0.33.3",
     "swiper": "^11.0.5"
   },
